# photo-truck

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: classify.rs  classify_tests.rs  cli.rs  commands.rs  exif.rs  hash.rs  history.rs  lib.rs  main.rs  rename.rs  thumbnail.rs  transfer.rs  transfer_v2.rs
src-tauri/tests/: integration_test.rs
